19-11-05更新 index样式，xadmin配置

--- a/templates/users/index.html
+++ b/templates/users/index.html
@@ -27,124 +27,124 @@
                             <div class="row">
 
                                 <div class="col-md-9" style="padding-right: 10px;">
-                                    <div class="col-md-2" style="padding-left: 20px; padding-right: 20px;">
+                                    <div class="col-md-2" style="padding-left: 10px; padding-right: 10px;">
                                         <div class="panel panel-default" style="margin-bottom: 0;">
                                             <div class="text-center">
                                                 <div class="panel-body"
-                                                     style="background-color: #fff; height: 80px;line-height: 80px; vertical-align: middle;">
+                                                     style="background-color: #fff; height: calc(100%);vertical-align: middle;">
                                                     <a href="{% url 'users:user_list' %}">
                                                         <i class="fa fa-user" style="font-size: 55px;"></i>
 {#                                                        <span class="glyphicon glyphicon-align-left" aria-hidden="true"></span>#}
                                                     </a>
                                                 </div>
                                                 <div class="panel-footer">
-                                                    <b style="margin-top: 10px;font-size: 13px">用户数量：{% Get_Users_Nums %}</b>
+                                                    <b style="margin-top: 10px;">用户数量：{% Get_Users_Nums %}</b>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
 
-{#                                    <div class="col-md-2" style="padding-left: 20px; padding-right: 20px;">#}
+{#                                    <div class="col-md-2" style="padding-left: 10px; padding-right: 10px;">#}
 {#                                        <div class="panel panel-default" style="margin-bottom: 0;">#}
 {#                                            <div class="text-center">#}
 {#                                                <div class="panel-body"#}
-{#                                                     style="background-color: #fff; height: 80px;line-height: 80px; vertical-align: middle;">#}
+{#                                                     style="background-color: #fff; height: calc(100%;vertical-align: middle;">#}
 {#                                                    <a href="{% url 'platform_management:platform_company_list' %}" class="fa fa-home"#}
 {#                                                       style="font-size: 55px;color: #1c2b36;"></a>#}
 {#                                                </div>#}
 {#                                                <div class="panel-footer">#}
-{#                                                    <b style="margin-top: 10px;font-size: 13px;">内部平台：{% Get_Company_Plat_Nums %}</b>#}
+{#                                                    <b style="margin-top: 10px;">内部平台：{% Get_Company_Plat_Nums %}</b>#}
 {#                                                </div>#}
 {#                                            </div>#}
 {#                                        </div>#}
 {#                                    </div>#}
 {##}
-{#                                    <div class="col-md-2" style="padding-left: 20px; padding-right: 20px;">#}
+{#                                    <div class="col-md-2" style="padding-left: 10px; padding-right: 10px;">#}
 {#                                        <div class="panel panel-default" style="margin-bottom: 0;">#}
 {#                                            <div class="text-center">#}
 {#                                                <div class="panel-body"#}
-{#                                                     style="background-color: #fff; height: 80px;line-height: 80px; vertical-align: middle;">#}
+{#                                                     style="background-color: #fff; height: calc(100%;vertical-align: middle;">#}
 {#                                                    <a href="{% url 'platform_management:platform_other_list' %}" class="fa fa-newspaper-o"#}
 {#                                                       style="font-size: 55px;color: #1c2b36;"></a>#}
 {#                                                </div>#}
 {#                                                <div class="panel-footer">#}
-{#                                                    <b style="margin-top: 10px;font-size: 13px;">第三方：{% Get_Others_Plat_Nums %}</b>#}
+{#                                                    <b style="margin-top: 10px;">第三方：{% Get_Others_Plat_Nums %}</b>#}
 {#                                                </div>#}
 {#                                            </div>#}
 {#                                        </div>#}
 {#                                    </div>#}
 
-                                    <div class="col-md-2" style="padding-left: 20px; padding-right: 20px;">
+                                    <div class="col-md-2" style="padding-left: 10px; padding-right: 10px;">
                                         <div class="panel panel-default" style="margin-bottom: 0;">
                                             <div class="text-center">
                                                 <div class="panel-body"
-                                                     style="background-color: #fff; height: 80px;line-height: 80px; vertical-align: middle;">
+                                                     style="background-color: #fff; height: calc(100%);vertical-align: middle;">
                                                     <a href="{% url 'host_management:host_list' %}"><i
                                                             class="fa fa-laptop"
                                                             style="font-size: 55px;color: #1c2b36;"></i></a>
                                                 </div>
                                                 <div class="panel-footer">
-                                                    <b style="margin-top: 10px;font-size: 13px;">主机数量：{% Get_Host_Nums %}</b>
+                                                    <b style="margin-top: 10px;">主机数量：{% Get_Host_Nums %}</b>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
 
-                                    <div class="col-md-2" style="padding-left: 20px; padding-right: 20px;">
+                                    <div class="col-md-2" style="padding-left: 10px; padding-right: 10px;">
                                         <div class="panel panel-default" style="margin-bottom: 0;">
                                             <div class="text-center">
                                                 <div class="panel-body"
-                                                     style="background-color: #fff; height: 80px;line-height: 80px; vertical-align: middle;">
+                                                     style="background-color: #fff; height: calc(100%);vertical-align: middle;">
                                                     <a href="{% url 'host_management:db_list'%}" class="fa fa-database"
                                                        style="font-size: 55px;color: #1c2b36;"></a>
                                                 </div>
                                                 <div class="panel-footer">
-                                                    <b style="margin-top: 10px;font-size: 13px;">数据库：{% Get_Db_Nums %}</b>
+                                                    <b style="margin-top: 10px;">数据库：{% Get_Db_Nums %}</b>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
 
-                                    <div class="col-md-2" style="padding-left: 20px; padding-right: 20px;">
+                                    <div class="col-md-2" style="padding-left: 10px; padding-right: 10px;">
                                         <div class="panel panel-default" style="margin-bottom: 0;">
                                             <div class="text-center">
                                                 <div class="panel-body"
-                                                     style="background-color: #fff; height: 80px;line-height: 80px; vertical-align: middle;">
+                                                     style="background-color: #fff; height: calc(100%);vertical-align: middle;">
                                                     <a href="{% url 'host_management:port_port_list'%}" class="fa fa-circle-o"
                                                        style="font-size: 55px;color: #1c2b36;"></a>
                                                 </div>
                                                 <div class="panel-footer">
-                                                    <b style="margin-top: 10px;font-size: 13px;">端口映射：{% Get_Port_Nums %}</b>
+                                                    <b style="margin-top: 10px;">端口映射：{% Get_Port_Nums %}</b>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
 
-                                    <div class="col-md-2" style="padding-left: 20px; padding-right: 20px;">
+                                    <div class="col-md-2" style="padding-left: 10px; padding-right: 10px;">
                                         <div class="panel panel-default" style="margin-bottom: 0;">
                                             <div class="text-center">
                                                 <div class="panel-body"
-                                                     style="background-color: #fff; height: 80px;line-height: 80px; vertical-align: middle;">
+                                                     style="background-color: #fff; height: calc(100%);vertical-align: middle;">
                                                     <a href="{% url 'host_management:domain_resolve_list'%}" class="fa fa-sort-amount-desc "
                                                        style="font-size: 55px;color: #1c2b36;"></a>
                                                 </div>
                                                 <div class="panel-footer">
-                                                    <b style="margin-top: 10px;font-size: 13px;">二级域名：{% Get_Domin_Nums %}</b>
+                                                    <b style="margin-top: 10px;">二级域名：{% Get_Domin_Nums %}</b>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
 
-                                    <div class="col-md-2" style="padding-left: 20px; padding-right: 20px;">
+                                    <div class="col-md-2" style="padding-left: 10px; padding-right: 10px;">
                                         <div class="panel panel-default" style="margin-bottom: 0;">
                                             <div class="text-center">
                                                 <div class="panel-body"
-                                                     style="background-color: #fff; height: 80px;line-height: 80px; vertical-align: middle;">
+                                                     style="background-color: #fff; height: calc(100%);vertical-align: middle;">
                                                     <a href="{% url 'document_management:doc_list' 'document' %}" class="fa fa-file-text-o"
                                                        style="font-size: 55px;color: #1c2b36;"></a>
                                                 </div>
                                                 <div class="panel-footer">
-                                                    <b style="margin-top: 10px;font-size: 13px;">文档数量：{% Get_Doc_Nums %}</b>
+                                                    <b style="margin-top: 10px;">文档数量：{% Get_Doc_Nums %}</b>
                                                 </div>
                                             </div>
                                         </div>
@@ -158,7 +158,7 @@
 
                                         <div class="panel-heading pos-rlt text-center"
                                              style="background-color: #fff;">
-                                            <span style="color: #1c2b36;">最新动态</span>
+                                            <span style="color: #1c2b36;"><b>最新动态</b></span>
                                         </div>
 
                                         <div class="panel-body" id="user_action_record" style="overflow-y: auto;">
