--- a/templates/users/index.html
+++ b/templates/users/index.html
@@ -43,21 +43,6 @@
                                             </div>
                                         </div>
                                     </div>
-
-{#                                    <div class="col-md-2" style="padding-left: 10px; padding-right: 10px;">#}
-{#                                        <div class="panel panel-default" style="margin-bottom: 0;">#}
-{#                                            <div class="text-center">#}
-{#                                                <div class="panel-body"#}
-{#                                                     style="background-color: #fff; height: calc(100%;vertical-align: middle;">#}
-{#                                                    <a href="{% url 'platform_management:platform_company_list' %}" class="fa fa-home"#}
-{#                                                       style="font-size: 55px;color: #1c2b36;"></a>#}
-{#                                                </div>#}
-{#                                                <div class="panel-footer">#}
-{#                                                    <b style="margin-top: 10px;">内部平台：{% Get_Company_Plat_Nums %}</b>#}
-{#                                                </div>#}
-{#                                            </div>#}
-{#                                        </div>#}
-{#                                    </div>#}
 {##}
 {#                                    <div class="col-md-2" style="padding-left: 10px; padding-right: 10px;">#}
 {#                                        <div class="panel panel-default" style="margin-bottom: 0;">#}
@@ -80,7 +65,7 @@
                                                 <div class="panel-body"
                                                      style="background-color: #fff; height: calc(100%);vertical-align: middle;">
                                                     <a href="{% url 'host_management:host_list' %}"><i
-                                                            class="fa fa-laptop"
+                                                            class="fa fa-television"
                                                             style="font-size: 55px;color: #1c2b36;"></i></a>
                                                 </div>
                                                 <div class="panel-footer">
@@ -109,6 +94,21 @@
                                         <div class="panel panel-default" style="margin-bottom: 0;">
                                             <div class="text-center">
                                                 <div class="panel-body"
+                                                     style="background-color: #fff; height: calc(100%;vertical-align: middle;">
+                                                    <a href="{% url 'platform_management:platform_company_list' %}" class="fa fa-home"
+                                                       style="font-size: 55px;color: #1c2b36;"></a>
+                                                </div>
+                                                <div class="panel-footer">
+                                                    <b style="margin-top: 10px;">内部平台：{% Get_Company_Plat_Nums %}</b>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="col-md-2" style="padding-left: 10px; padding-right: 10px;">
+                                        <div class="panel panel-default" style="margin-bottom: 0;">
+                                            <div class="text-center">
+                                                <div class="panel-body"
                                                      style="background-color: #fff; height: calc(100%);vertical-align: middle;">
                                                     <a href="{% url 'host_management:port_port_list'%}" class="fa fa-circle-o"
                                                        style="font-size: 55px;color: #1c2b36;"></a>
@@ -120,20 +120,20 @@
                                         </div>
                                     </div>
 
-                                    <div class="col-md-2" style="padding-left: 10px; padding-right: 10px;">
-                                        <div class="panel panel-default" style="margin-bottom: 0;">
-                                            <div class="text-center">
-                                                <div class="panel-body"
-                                                     style="background-color: #fff; height: calc(100%);vertical-align: middle;">
-                                                    <a href="{% url 'host_management:domain_resolve_list'%}" class="fa fa-sort-amount-desc "
-                                                       style="font-size: 55px;color: #1c2b36;"></a>
-                                                </div>
-                                                <div class="panel-footer">
-                                                    <b style="margin-top: 10px;">二级域名：{% Get_Domin_Nums %}</b>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
+{#                                    <div class="col-md-2" style="padding-left: 10px; padding-right: 10px;">#}
+{#                                        <div class="panel panel-default" style="margin-bottom: 0;">#}
+{#                                            <div class="text-center">#}
+{#                                                <div class="panel-body"#}
+{#                                                     style="background-color: #fff; height: calc(100%);vertical-align: middle;">#}
+{#                                                    <a href="{% url 'host_management:domain_resolve_list'%}" class="fa fa-sort-amount-desc "#}
+{#                                                       style="font-size: 55px;color: #1c2b36;"></a>#}
+{#                                                </div>#}
+{#                                                <div class="panel-footer">#}
+{#                                                    <b style="margin-top: 10px;">二级域名：{% Get_Domin_Nums %}</b>#}
+{#                                                </div>#}
+{#                                            </div>#}
+{#                                        </div>#}
+{#                                    </div>#}
 
                                     <div class="col-md-2" style="padding-left: 10px; padding-right: 10px;">
                                         <div class="panel panel-default" style="margin-bottom: 0;">
